deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-network-tester-demo
  namespace: demos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-network-tester-demo
  template:
    metadata:
      labels:
        app: webapp-network-tester-demo
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - image: jannemattila/webapp-network-tester:1.0.33
        imagePullPolicy: Always
        name: webapp-network-tester-demo
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
