service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-network-tester-demo
  namespace: demos
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: webapp-network-tester-demo
