ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demos-ingress
  namespace: demos
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/use-private-ip: "true"
spec:
  tls:
    - secretName: tls-secret
  rules:
  - http:
      paths:
      - backend:
          service:
            name: webapp-network-tester-demo
            port:
              number: 80
        path: /
        pathType: Prefix
